[gd_scene load_steps=5 format=2]

[ext_resource path="res://GFX/Items/level_ups/sprite_2.png" type="Texture" id=1]
[ext_resource path="res://GFX/Items/level_ups/sprite_3.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Items/HealthRock3.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30.6656, 58.077 )

[node name="HealthRock3" type="Area2D"]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 516.281, 299.856 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 516.292, 301.583 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 516.292, 301.583 )
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
[connection signal="body_entered" from="." to="." method="_on_HealthRock_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
